--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "g1-messenger",
+  "name": "angular-electron-ionic",
   "version": "0.0.1",
   "homepage": "https://github.com/victor-nunesm",
-  "description": "G1 Distribuidora - Messenger APP",
+  "description": "angular-electron-ionic",
   "author": {
     "name": "Victor Nunes",
     "email": "josevictor19741@gmail.com"
@@ -32,18 +32,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.1100.4",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@ctrl/ngx-emoji-mart": "^4.1.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
-    "angular2-moment": "^1.9.0"
+    "@ionic/angular": "^5.0.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
